changes for ubi8.7 java17 build from repo : https://github.com/Bhuvana556/front50-oes/tree/front50build

--- a/build.gradle
+++ b/build.gradle
@@ -18,10 +18,21 @@ plugins {
   id 'io.spinnaker.project' version "$spinnakerGradleVersion" apply false
   id "org.jetbrains.kotlin.jvm" version "$kotlinVersion" apply false
   id "org.jetbrains.kotlin.plugin.allopen" version "$kotlinVersion" apply false
+  id 'org.springframework.boot' version '3.0.0' apply true
 }
 
 allprojects {
   apply plugin: 'io.spinnaker.project'
+  //apply plugin: 'io.spinnaker.kork'
+
+  repositories {
+    mavenLocal()
+    mavenCentral()
+    gradlePluginPortal()
+  }
+  tasks.withType( Copy).all {
+    duplicatesStrategy 'exclude'
+  }
 }
 
 subprojects { project ->
@@ -30,6 +41,8 @@ subprojects { project ->
   if ([korkVersion, fiatVersion].find { it.endsWith("-SNAPSHOT") }) {
     repositories {
       mavenLocal()
+      mavenCentral()
+      gradlePluginPortal()
     }
   }
 
@@ -57,19 +70,25 @@ subprojects { project ->
       annotationProcessor("org.springframework.boot:spring-boot-configuration-processor")
       testAnnotationProcessor(platform("io.spinnaker.kork:kork-bom:$korkVersion"))
 
-      implementation("net.logstash.logback:logstash-logback-encoder")
+      implementation("net.logstash.logback:logstash-logback-encoder:4.11")
 
       compileOnly("org.projectlombok:lombok")
       annotationProcessor("org.projectlombok:lombok")
       testAnnotationProcessor("org.projectlombok:lombok")
-
-      testImplementation("org.codehaus.groovy:groovy-all")
+      implementation "com.amazonaws:aws-java-sdk-bom:1.12.411"
+      implementation "com.amazonaws:aws-java-sdk-sns:1.12.411"
+      implementation "com.amazonaws:aws-java-sdk-sqs:1.12.411"
+      //testImplementation("org.codehaus.groovy:groovy-all:3.0.16")
+      api("org.apache.groovy:groovy:4.0.9")
+      implementation "org.apache.groovy:groovy:4.0.9"
       testImplementation("org.spockframework:spock-core")
       testImplementation("org.springframework.boot:spring-boot-starter-test")
+      api("org.spockframework:spock-bom:2.4-M1-groovy-4.0")
+      testImplementation("org.spockframework:spock-bom:2.4-M1-groovy-4.0")
       testImplementation("org.spockframework:spock-spring")
       testImplementation("org.springframework:spring-test")
       testImplementation("org.hamcrest:hamcrest-core")
-      testRuntimeOnly("cglib:cglib-nodep")
+      testRuntimeOnly("cglib:cglib-nodep:3.3.0")
       testRuntimeOnly("org.objenesis:objenesis")
     }
   }
