--- a/front50-test/front50-test.gradle
+++ b/front50-test/front50-test.gradle
@@ -15,15 +15,16 @@
  */
 
 dependencies {
-  implementation("org.codehaus.groovy:groovy-all")
+  //api("org.apache.groovy:groovy:4.0.9")
+
 
   implementation project(":front50-api")
   implementation project(":front50-core")
   implementation project(":front50-s3")
-
-  implementation "org.codehaus.groovy:groovy"
+  testImplementation "org.apache.groovy:groovy:4.0.9"
   implementation "org.spockframework:spock-core"
   implementation "com.amazonaws:aws-java-sdk-s3"
+  //testImplementation "net.logstash.logback:logstash-logback-encoder:4.11"
 }
 
 tasks.compileGroovy.enabled = true
