--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,10 @@
-fiatVersion=1.36.0
+fiatVersion=1-0-SNAPSHOT
 includeProviders=azure,gcs,oracle,redis,s3,swift,sql
-korkVersion=7.165.0
+korkVersion=2-0-SNAPSHOT
 org.gradle.parallel=true
-spinnakerGradleVersion=8.25.0
-targetJava11=true
-kotlinVersion=1.4.0
+spinnakerGradleVersion=1-0-SNAPSHOT
+#targetJava11=true
+kotlinVersion=1.7.21
 
 # To enable a composite reference to a project, set the
 #  project property `'<projectName>Composite=true'`.
