--- a/front50-core/front50-core.gradle
+++ b/front50-core/front50-core.gradle
@@ -23,11 +23,15 @@ dependencies {
   implementation "org.springframework.security:spring-security-core"
   implementation "org.springframework.security:spring-security-web"
   implementation "io.spinnaker.kork:kork-web"
-  implementation "io.reactivex:rxjava"
-  implementation "com.jakewharton.retrofit:retrofit1-okhttp3-client"
-  implementation "com.squareup.retrofit:converter-jackson"
-  implementation "javax.validation:validation-api"
+  implementation "io.reactivex:rxjava:1.3.8"
+  implementation "com.jakewharton.retrofit:retrofit1-okhttp3-client:1.1.0"
+  implementation "com.squareup.retrofit:converter-jackson:1.9.0"
+  implementation "jakarta.validation:jakarta.validation-api:3.0.2"
+  implementation "javax.validation:validation-api:1.1.0.Final"
   implementation "org.hibernate.validator:hibernate-validator"
+  implementation "net.logstash.logback:logstash-logback-encoder:4.11"
+  testImplementation "org.apache.groovy:groovy:4.0.9"
+  //testImplementation "org.codehaus.groovy:groovy-all:3.0.16"
   api "com.github.ben-manes.caffeine:guava"
 
   api "io.spinnaker.kork:kork-plugins"
