--- a/front50-gcs/front50-gcs.gradle
+++ b/front50-gcs/front50-gcs.gradle
@@ -31,12 +31,13 @@ dependencies {
   implementation ("com.google.cloud:google-cloud-storage:1.108.0") {
        force=true
   }
+  api("org.springframework.boot:spring-boot-starter-test")
   implementation "com.google.guava:guava"
-  implementation "com.netflix.spectator:spectator-api"
+  implementation "com.netflix.spectator:spectator-api:1.3.7"
   implementation "io.spinnaker.kork:kork-exceptions"
   implementation "io.github.resilience4j:resilience4j-circuitbreaker"
-  implementation "io.reactivex:rxjava"
-  implementation "net.logstash.logback:logstash-logback-encoder"
+  implementation "io.reactivex:rxjava:1.3.8"
+  implementation "net.logstash.logback:logstash-logback-encoder:4.11"
   implementation "org.slf4j:slf4j-api"
   implementation "org.springframework:spring-beans"
   implementation "org.springframework:spring-context"
@@ -46,8 +47,11 @@ dependencies {
   testImplementation "com.google.http-client:google-http-client"
   testImplementation "com.google.cloud:google-cloud-core"
   testImplementation "io.strikt:strikt-core"
-  testImplementation "io.mockk:mockk"
+  testImplementation "io.mockk:mockk:1.10.5"
+  testImplementation "org.apache.groovy:groovy:4.0.9"
+  //testImplementation "org.codehaus.groovy:groovy-all:3.0.16"
   testImplementation "org.junit.jupiter:junit-jupiter-api"
+  testImplementation "org.springframework.boot:spring-boot-starter-test"
 }
 
 test {
