--- a/front50-oracle/front50-oracle.gradle
+++ b/front50-oracle/front50-oracle.gradle
@@ -11,6 +11,8 @@ dependencies {
   implementation "org.springframework.boot:spring-boot-autoconfigure"
   implementation "org.springframework.boot:spring-boot-starter-actuator"
   implementation "org.springframework.boot:spring-boot-starter-web"
+  implementation "net.logstash.logback:logstash-logback-encoder:4.11"
+  testImplementation "org.apache.groovy:groovy:4.0.9"
 
   testImplementation project(":front50-test")
 }
