--- a/front50-s3/front50-s3.gradle
+++ b/front50-s3/front50-s3.gradle
@@ -29,6 +29,6 @@ dependencies {
   implementation "com.netflix.eureka:eureka-client"
   implementation "net.logstash.logback:logstash-logback-encoder:4.11"
   testImplementation "org.apache.groovy:groovy:4.0.9"
-
+  implementation "com.jcraft:jsch.agentproxy.connector-factory:0.0.9"
   testImplementation project(":front50-test")
 }
