--- a/build.gradle
+++ b/build.gradle
@@ -90,6 +90,11 @@ subprojects { project ->
       //testImplementation("org.codehaus.groovy:groovy-all:3.0.16")
       api("org.apache.groovy:groovy:4.0.9")
       implementation "org.apache.groovy:groovy:4.0.9"
+      implementation("com.google.oauth-client:google-oauth-client:1.34.1")
+      implementation("com.jcraft:jsch:0.1.55")
+      implementation("org.jboss.resteasy:resteasy-client:6.2.3.Final")
+      implementation("org.jboss.resteasy:resteasy-jaxrs:4.0.0.Beta5")
+
       testImplementation("org.spockframework:spock-core")
       testImplementation("org.springframework.boot:spring-boot-starter-test")
       api("org.spockframework:spock-bom:2.4-M1-groovy-4.0")
