changes to update spring-core version 6.0.2 to 6.0.8

--- a/front50-api-tck/front50-api-tck.gradle
+++ b/front50-api-tck/front50-api-tck.gradle
@@ -22,3 +22,9 @@ test {
     includeEngines "junit-jupiter"
   }
 }
+compileTestKotlin {
+  kotlinOptions {
+    languageVersion = "1.7"
+    jvmTarget = "17"
+  }
+}
