cve fix - exclude com.nimbusds:nimbus-jose-jwt  (#15)
* Update front50-oracle.gradle cve fix - update version com.nimbusds:nimbus-jose-jwt

cve fix - update version com.nimbusds:nimbus-jose-jwt

* Update front50-azure.gradle cve fix - exclude com.nimbusds:nimbus-jose-jwt 

 cve fix - exclude com.nimbusds:nimbus-jose-jwt

--- a/front50-oracle/front50-oracle.gradle
+++ b/front50-oracle/front50-oracle.gradle
@@ -6,6 +6,7 @@ dependencies {
   implementation "io.spinnaker.kork:kork-core"
   implementation ('com.oracle.oci.sdk:oci-java-sdk-objectstorage:1.19.1'){
         force=true
+        exclude group : "com.nimbusds", module : "nimbus-jose-jwt"
   }
   implementation "com.sun.jersey:jersey-client:1.19.4"
   implementation "org.springframework.boot:spring-boot-autoconfigure"
